# urchin-zmk-firmware

./: .gitignore  AGENTS.md  README.md  build.sh  draw.sh  keymap_drawer.config.yaml  pyproject.toml
.github/workflows/: draw-keymaps.yml
config/: urchin.keymap  west.yml
docs/: DESIGN_PRINCIPLES.md  KEYMAP_GUIDE.md  LAYOUT_ANALYSIS.md  PHASE1_IMPLEMENTATION.md  PROPOSED_OPTIMIZATIONS.md
