[project]
name = "urchin-zmk-firmware"
version = "0.1.0"
description = "ZMK firmware build environment for Urchin keyboard"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Urchin ZMK Firmware" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: System :: Hardware",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anytree>=2.13.0",
    "canopen>=2.4.1",
    "clang-format>=15.0.0",
    "cmake>=4.1.0",
    "gitlint>=0.19.1",
    "gperf>=0.2",
    "graphviz>=0.21",
    "grpcio-tools>=1.47.0",
    "imgtool>=1.9",
    "intelhex>=2.3.0",
    "junit2html>=31.0.2",
    "keymap-drawer>=0.22.1",
    "lpc-checksum>=3.0.0",
    "ninja>=1.13.0",
    "packaging>=25.0",
    "pillow>=10.0",
    "progress>=1.6.1",
    "protobuf>=3.20.3",
    "psutil>=7.0.0",
    "pyelftools>=0.32",
    "pygithub>=2.7.0",
    "pykwalify>=1.8.0",
    "pylink-square>=1.6.0",
    "pyserial>=3.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "west>=1.4.0",
    "zcbor>=0.6.0",
]

[project.scripts]
west = "west:main"
keymap = "keymap_drawer:main"

[tool.uv]
dev-dependencies = []
